website changes 11.1.23 done

--- a/about.html
+++ b/about.html
@@ -112,9 +112,10 @@
                     <div class="about-content">
                         <span class="sec-type">About JEBA</span>
                         <h3>Trust That You're Working <br> With The Best Accountants and Business Advisors</h3>
-                        <p>Our aim is to provide quality Accounting, Taxation and Bookkeeping services to our Clients so that they can focus more on expanding their business activities instead of worrying about their present workload.  JEBA can be trusted to provide your firm with immediate and reliable assistance. Our knowledgeable accountants have over 10 years of collective New Zealand accounting experience and are an organizational force to be reckoned with. Having providing figures and balanced books for a wide range of businesses, it's safe to say there isn't much that the staff at Joyous Elite Business Advisory haven't seen and dealt with. </p>
+                        <p>Our aim is to provide quality Accounting, Taxation, Bookkeeping and Business Advisory services to our Clients so that they can focus more on expanding their business activities instead of worrying about their present workload. JEBA can be trusted to provide your firm with immediate and reliable assistance. Our knowledgeable accountants have over 10 years of collective New Zealand accounting experience and are an organizational force to be reckoned with. Having providing figures and balanced books for a wide range of businesses, it's safe to say there isn't much that the staff at Joyous Elite Business Advisory haven't seen and dealt with. </p>
                         <p>From preparing Balance Sheet or profit and loss sheets to Book-keeping, we simply get your Client figures in order, on time.</p>
-                        
+                        <h5>Accounting software we have worked on</h5>
+                        <p>The team is holding vast experience in using different Accounting software like Xero, MYOB AO, MYOB Essentials, CCH iFirm, XPA, QuickBooks, Reckon, Electronic Workpapers (Excel), Freshbooks and others.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -181,6 +182,15 @@
                 <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
+                            <img src="/images/icon5.png" alt="icon">
+                        </div>
+                        <div class="content">
+                            <h4>Data Security and Privacy</h4>
+                            <p>Your privacy is our priority because we believe you must feel confident about how we manage your data and you be confident that your data is secure.</p>
+                        </div>
+                    </div>
+                    <div class="wcu-item">
+                        <div class="icon">
                             <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
@@ -201,7 +211,7 @@
 
                 <div class="col-xl-4">
                     <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.webp" alt="thumbs up">
+                        <img src="/images/img_2.jpg" alt="thumbs up">
                     </div>
                 </div>
                 
@@ -224,11 +234,6 @@
                             <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
                             <img src="/images/xero.png" alt="icon">
