--- a/careers.html
+++ b/careers.html
@@ -125,7 +125,7 @@
     <!-- about end -->
 
     <!-- contact form start -->
-    <section class="home-services section-sapce">
+    <section class="home-services section-sapce pt-0">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
