--- a/services.html
+++ b/services.html
@@ -112,16 +112,112 @@
                     <div class="default-content">
                         <h2>Business Process Management Solutions</h2>
                         <p>Transforming your business operations with our vast industry experience, technological expertise, and a dedicated workforce. We help you stay ahead of the curve and will be adding pace to your business.</p>
-                        <ul>
-                            <li>Annual Financial Reporting</li>
-                            <li>Income Tax Returns</li>
-                            <li>GST Returns</li>
-                            <li>Aged Payables/Receivables Reconciliations</li>
-                            <li>Bookkeeping</li>
-                            <li>Bank Reconciliations</li>
-                            <li>Ledger and Fixed Assets Conversions to Xero</li>
-                            <li>Business Benchmarking</li>
-                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/1.jpg" alt="Annual Financial Reporting">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-user-interface"></span>
+                            </div>
+                            <figcaption>Annual Financial Reporting</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/2.jpg" alt="Income Tax Returns">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-employee"></span>
+                            </div>
+                            <figcaption>Income Tax Returns</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/3.jpg" alt="GST Returns">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-resident"></span>
+                            </div>
+                            <figcaption>GST Returns</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/4.jpg" alt="Aged Payables/Receivables Reconciliations">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-note"></span>
+                            </div>
+                            <figcaption>Aged Payables/Receivables Reconciliations</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/5.jpg" alt="Bookkeeping">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-open-book"></span>
+                            </div>
+                            <figcaption>Bookkeeping</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/6.jpg" alt="Bank Reconciliations">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-consulting"></span>
+                            </div>
+                            <figcaption>Bank Reconciliations</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/7.jpg" alt="Ledger and Fixed Assets Conversions to Xero">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-study-1"></span>
+                            </div>
+                            <figcaption>Ledger and Fixed Assets Conversions to Xero</figcaption>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 mb-4">
+                    <div class="serv-item">
+                        <figure>
+                            <img src="./images/8.jpg" alt="Business Benchmarking">
+                        </figure>
+                        <div class="serv-content">
+                            <div class="serv-icon">
+                                <span class="jeba-icon-study"></span>
+                            </div>
+                            <figcaption>Business Benchmarking</figcaption>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,6 +332,15 @@
                 <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
+                            <img src="/images/icon5.png" alt="icon">
+                        </div>
+                        <div class="content">
+                            <h4>Data Security and Privacy</h4>
+                            <p>Your privacy is our priority because we believe you must feel confident about how we manage your data and you be confident that your data is secure.</p>
+                        </div>
+                    </div>
+                    <div class="wcu-item">
+                        <div class="icon">
                             <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
@@ -256,7 +361,7 @@
 
                 <div class="col-xl-4">
                     <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.webp" alt="thumbs up">
+                        <img src="/images/img_2.jpg" alt="thumbs up">
                     </div>
                 </div>
                 
@@ -279,11 +384,6 @@
                             <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
                             <img src="/images/xero.png" alt="icon">
