social proof added and update colors

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-3">
                     <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
@@ -263,7 +263,7 @@
                         <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-xl-4">
+                <div class="col-sm-12 col-md-6 col-xl-4">
                     <div class="footer-item">
                         <h4>Contact</h4>
                         <div class="address">
@@ -284,7 +284,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-xl-4">
+                <div class="col-sm-6 col-md-3 col-xl-2">
                     <div class="footer-item">
                         <h4>Quick Links</h4>
                         <ul>
@@ -304,6 +304,20 @@
                                 <a href="careers.html">Careers</a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3 col-xl-2">
+                    <div class="footer-item">
+                        <h4>Follow Us</h4>
+                        <div class="social-links">
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-linkedin"></span>
+                            </a>
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-instagram"></span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
