--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="slide-content">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8 col-xl-6 text-center">
+                            <div class="col-lg-8 col-xl-7 text-center">
                                 <p class="animated slideInDown">We are your</p>
                                 <div class="slide-head animated slideInLeft">Accounting Outsource Partner</div>
                                 <div class="animated slideInLeft different-font tk-filicudi-solid">Joyous Elite Business Advisory</div>
@@ -110,7 +110,7 @@
                 <div class="slide-content">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8 col-xl-6 text-center">
+                            <div class="col-lg-8 col-xl-7 text-center">
                                 <p class="animated slideInDown">Dreading those looming Income Tax Return Deadlines?</p>
                                 <p class="animated slideInDown">Struggling to balance end of year accounts?</p>
                                 <p class="animated slideInDown">Hassled while doing Bank Reconciliations?</p>
@@ -126,7 +126,7 @@
                 <div class="slide-content">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8 col-xl-6 text-center">
+                            <div class="col-lg-8 col-xl-7 text-center">
                                 <div class="slide-head animated slideInLeft">Business Process Management Solutions </div>
                                 <div class="different-font animated slideInLeft tk-filicudi-solid">Joyous Elite Business Advisory</div>
                             </div>
@@ -328,7 +328,7 @@
     <footer class="main-footer">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4">
+                <div class="col-xl-3">
                     <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
@@ -338,7 +338,7 @@
                         <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-xl-4">
+                <div class="col-sm-12 col-md-6 col-xl-4">
                     <div class="footer-item">
                         <h4>Contact</h4>
                         <div class="address">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-xl-4">
+                <div class="col-sm-6 col-md-3 col-xl-2">
                     <div class="footer-item">
                         <h4>Quick Links</h4>
                         <ul>
@@ -379,6 +379,20 @@
                                 <a href="careers.html">Careers</a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-3 col-xl-2">
+                    <div class="footer-item">
+                        <h4>Follow Us</h4>
+                        <div class="social-links">
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Linkedin" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-linkedin"></span>
+                            </a>
+                            <a target="_blank" data-bs-toggle="tooltip" data-bs-title="Instagram" href="https://www.linkedin.com/">
+                                <span class="jeba-two-icon-instagram"></span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
