--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                         <h3 class="wow animated fadeInDown">You can simply request a callback from us:</h3>
                     </div>
                     <div class="col-lg-12 col-xl-7">
-                        <form class="row justify-content-center">
+                        <form class="row justify-content-center" method="post">
                             <div class="row justify-content-center">
                                 <div class="col-sm-6 mb-4">
                                     <input type="text" class="form-control" placeholder="Name" aria-label="Name">
@@ -155,7 +155,7 @@
                             </div>
                             <div class="row justify-content-center">
                                 <div class="col text-center">
-                                    <button type="submit" class="btn btn-info">Request Callback</button>
+                                    <button type="submit" onclick="sendMail()" class="btn btn-info">Request Callback</button>
                                 </div>
                             </div>
                         </form>
@@ -337,5 +337,20 @@
     <script src="/js/owl.carousel.min.js"></script>
     <script src="/js/wow.min.js"></script>
     <script src="/js/custom.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script type="text/javascript">
+function sendEmail() {
+Email.send({
+SecureToken : "<your security token>",
+To : 'ka020694@gmail.com',
+From : "kangad420@hotmail.com",
+Subject: "Testing Email using javascript",
+Body: "If you are reading this, dont forget to applaud"
+})
+.then(function (message) {
+alert("Email successfully sent")
+});
+}
+</script>
 </body>
 </html>
