--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@
 <script type="text/javascript">
 function sendEmail() {
 Email.send({
-SecureToken : "<your security token>",
+SecureToken : "6d1b379f-9584-42f6-896b-48914f15f68d",
 To : 'ka020694@gmail.com',
 From : "kangad420@hotmail.com",
 Subject: "Testing Email using javascript",
